--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -31,8 +31,6 @@ jobs:
         id: get_pr_data
         with:
           route: GET /repos/{full_name}/pulls/{number}
-          number: ${{ steps.pr_number.outputs.content }}
-          full_name: ${{ github.event.repository.full_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v4
@@ -53,16 +51,10 @@ jobs:
             with:
               java-version: 17
               distribution: 'temurin'
-              cache: gradle
+              cache: maven
           - name: SonarCloud Scan on PR
             if: github.event.workflow_run.event == 'pull_request'
-            run: ./gradlew check sonar -Dsonar.scm.revision=${{ github.event.workflow_run.head_sha }} -Dsonar.pullrequest.key=${{ fromJson(steps.get_pr_data.outputs.data).number }} -Dsonar.pullrequest.branch=${{ fromJson(steps.get_pr_data.outputs.data).head.ref }} -Dsonar.pullrequest.base=${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}
-            env:
-              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          - name: SonarCloud Scan on push
-            if: github.event.workflow_run.event == 'push' && github.event.workflow_run.head_repository.full_name == github.event.repository.full_name
-            run: ./gradlew check sonar -Dsonar.scm.revision=${{ github.event.workflow_run.head_sha }} -Dsonar.branch.name=${{ github.event.workflow_run.head_branch }}
+            run: mvn sonar:sonar -Dsonar.projectKey= pepepopo-bot_test_repo
             env:
               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
