--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         run: echo ${{ github.event.number }} > PR_NUMBER.txt
              echo ${{ env.SONAR_TOKEN_SET }}
       - name: Archive PR number
-        if: env.SONAR_TOKEN_SET == 'false'
+        if: env.SONAR_TOKEN_SET != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: PR_NUMBER
