--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -32,6 +32,8 @@ jobs:
         id: get_pr_data
         with:
           route: GET /repos/{full_name}/pulls/{number}
+          number: ${{ steps.pr_number.outputs.content }}
+          full_name: ${{ github.event.repository.full_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v4
@@ -55,7 +57,7 @@ jobs:
               cache: maven
           - name: SonarCloud Scan on PR
             if: github.event.workflow_run.event == 'pull_request'
-            run: mvn sonar:sonar -Dsonar.projectKey= pepepopo-bot_test_repo
+            run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
             env:
               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
