--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -26,6 +26,8 @@ jobs:
         uses: juliangruber/read-file-action@v1
         with:
                 path: ./PR_NUMBER.txt
+      - name: Debug PR number
+        run: echo "PR number ${{ steps.pr_number.outputs.content }}"
       - name: Request GitHub API for PR data
         if: github.event.workflow_run.event == 'pull_request'
         uses: octokit/request-action@v2.x
