--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,12 @@ jobs:
         if: env.SONAR_TOKEN_SET == 'true'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dproject.key=pepepopo-bot_test_repo
+        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
       - name: Save PR number
         if: github.event_name == 'pull_request'
-        run: echo ${{ github.event.number }} > PR_NUMBER.txt
-             echo ${{ env.SONAR_TOKEN_SET }}
+        run: |
+          echo ${{ github.event.number }} > PR_NUMBER.txt
+          echo ${{ env.SONAR_TOKEN_SET }}
       - name: Archive PR number
         if: env.SONAR_TOKEN_SET != 'true'
         uses: actions/upload-artifact@v4
