--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,12 +28,14 @@ jobs:
                 path: ./PR_NUMBER.txt
       - name: Debug PR number
         run: echo "PR number ${{ steps.pr_number.outputs.content }}"
+      - name: Debug event JSON
+        run: cat $GITHUB_EVENT_PATH
       - name: Request GitHub API for PR data
         if: github.event.workflow_run.event == 'pull_request'
         uses: octokit/request-action@v2.x
         id: get_pr_data
         with:
-          route: GET /repos/${{ github.event.repository.full_name }}/pulls/${{ steps.pr_number.outputs.content }}
+          route: GET /repos/${{ github.event.workflow_run.head_repository.full_name }}/pulls/${{ steps.pr_number.outputs.content }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v4
@@ -49,15 +51,15 @@ jobs:
           git checkout -B ${{ fromJson(steps.get_pr_data.outputs.data).base.ref }} upstream/${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}
           git checkout ${{ github.event.workflow_run.head_branch }}
           git clean -ffdx && git reset --hard HEAD
-          - name: Set up JDK 17
-            uses: actions/setup-java@v4
-            with:
-              java-version: 17
-              distribution: 'temurin'
-              cache: maven
-          - name: SonarCloud Scan on PR
-            if: github.event.workflow_run.event == 'pull_request'
-            run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
-            env:
-              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: maven
+      - name: SonarCloud Scan on PR
+        if: github.event.workflow_run.event == 'pull_request'
+        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
