--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -14,50 +14,17 @@ jobs:
       - name: echo event
         run: cat $GITHUB_EVENT_PATH
 
-      - name: Download PR number artifact
-        if: github.event.workflow_run.event == 'pull_request'
-        uses: dawidd6/action-download-artifact@v10
+      - name: Download Java binaries
+        uses: actions/download-artifact@v4
         with:
-            workflow: ${{ github.event.workflow_run.name }}
-            run_id: ${{ github.event.workflow_run.id }}
-            name: PR_NUMBER
-
-      - name: Read PR_NUMBER.txt
-        if: github.event.workflow_run.event == 'pull_request'
-        id: pr_number
-        uses: juliangruber/read-file-action@v1
-        with:
-                path: ./PR_NUMBER.txt
-
-      - name: Debug PR number
-        run: echo "PR number ${{ steps.pr_number.outputs.content }}"
-
-      - name: Debug event JSON
-        run: cat $GITHUB_EVENT_PATH
-
-      - name: Request GitHub API for PR data
-        if: github.event.workflow_run.event == 'pull_request'
-        uses: octokit/request-action@v2.x
-        id: get_pr_data
-        with:
-          route: GET /repos/${{ github.event.workflow_run.repository.full_name }}/pulls/${{ steps.pr_number.outputs.content }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: java-binaries
+          path: binaries
 
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.event.workflow_run.head_repository.full_name }}
           ref: ${{ github.event.workflow_run.head_branch }}
           fetch-depth: 0
-
-      - name: Checkout base branch
-        if: github.event.workflow_run.event == 'pull_request'
-        run: |
-          git remote add upstream ${{ github.event.repository.clone_url }}
-          git fetch upstream
-          git checkout -B ${{ fromJson(steps.get_pr_data.outputs.data).base.ref }} upstream/${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}
-          git checkout ${{ github.event.workflow_run.head_branch }}
-          git clean -ffdx && git reset --hard HEAD
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -66,9 +33,12 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: List Java binaries
+        run: ls -R binaries
+
       - name: SonarCloud Scan on PR
         if: github.event.workflow_run.event == 'pull_request'
-        run: mvn -X sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
+        run: mvn -X sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo -Dsonar.java.binaries=binaries
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
