--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-binaries
-          path: target/classes
+          path: |
+            **/target/classes
+            **/target/test-classes
 
 
