--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: java-binaries
-          path: binaries
+          path: java-binaries
 
       - uses: actions/checkout@v4
         with:
@@ -38,7 +38,7 @@ jobs:
 
       - name: SonarCloud Scan on PR
         if: github.event.workflow_run.event == 'pull_request'
-        run: mvn -X sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo -Dsonar.java.binaries=binaries
+        run: mvn -X sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo -Dsonar.java.binaries=java-binaries/**/classes
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
