--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           workflow: ${{ github.event.workflow_run.name }}
           run_id: ${{ github.event.workflow_run.id }}
+          repo: ${{ github.event.workflow_run.head_repository.full_name }}
+          github_token: '${{ secrets.PAT }}'
           name: java-binaries
           path: java-binaries
           workflow_search: true
