--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -27,18 +27,12 @@ jobs:
           repo: pepepopo-bot/test_repo
           github_token: ${{ secrets.PAT }}
           allow_forks: true
-          name: java-binaries
-          path: java-binaries
+          name: project
+          path: ./
           workflow_search: true
 
       - name: List java-binaries folder
-        run: ls -R java-binaries
-
-      - uses: actions/checkout@v4
-        with:
-          repository: ${{ github.event.workflow_run.head_repository.full_name }}
-          ref: ${{ github.event.workflow_run.head_branch }}
-          fetch-depth: 0
+        run: ls
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -49,7 +43,7 @@ jobs:
 
       - name: SonarCloud Scan on PR
         if: github.event.workflow_run.event == 'pull_request'
-        run: mvn -X sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo -Dsonar.sources=src/main/java/ -Dsonar.java.binaries=./target/classes
+        run: mvn -X sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
