--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: compiled
-          path: target/
+          path: |
+            **/target
