add profile to build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           cache: "maven"
 
       - name: Check
-        run: mvn -B install
+        run: mvn -B -P metrics install
 
       - name: Sonar
         if: env.SONAR_TOKEN_SET == 'true'
