--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -34,21 +34,41 @@ jobs:
           path: compiled
           workflow_search: true
 
-      - name: Get PR info
-        run: |
-          set -e
-          
-          PR_URL=$(jq -r '.workflow_run.pull_requests[0].url' "$GITHUB_EVENT_PATH")
-          
-          PR_JSON=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
-          -H "Accept: application/vnd.github+json" \
-          "$PR_URL")
-          
-          echo "pr_number=$(echo "$PR_JSON" | jq -r '.number')" >> $GITHUB_OUTPUT
-          echo "pr_branch=$(echo "$PR_JSON" | jq -r '.head.ref')" >> $GITHUB_OUTPUT
-          echo "pr_base=$(echo "$PR_JSON" | jq -r '.base.ref')" >> $GITHUB_OUTPUT
+      - name: Read PR number
+        id: pr_number
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./pr_number.txt
+
+      - name: Request GitHub API for PR data
+        uses: octokit/request-action@v2.x
+        id: get_pr_data
+        with:
+          route: GET /repos/{full_name}/pulls/{number}
+          number: ${{ steps.pr_number.outputs.content }}
+          full_name: ${{ github.event.repository.full_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Save branches
+        run: |
+          PR_HEAD_BRANCH=$(echo "${{ fromJson(steps.get_pr_data.outputs.data).head.ref }}" | jq -r '.')
+          PR_BASE_BRANCH=$(echo "${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}" | jq -r '.')
+    
+          echo "PR_HEAD_BRANCH=$PR_HEAD_BRANCH" >> $GITHUB_ENV
+          echo "PR_BASE_BRANCH=$PR_BASE_BRANCH" >> $GITHUB_ENV
+
+      - name: Download PR number
+        uses: dawidd6/action-download-artifact@v10
+        with:
+          workflow: ${{ github.event.workflow_run.name }}
+          run_id: ${{ github.event.workflow_run.id }}
+          repo: pepepopo-bot/test_repo
+          github_token: ${{ secrets.PAT }}
+          allow_forks: true
+          name: pr_number
+          path: .
+          workflow_search: true
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -59,7 +79,7 @@ jobs:
 
       - name: SonarCloud Scan on PR
         if: github.event.workflow_run.event == 'pull_request'
-        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo -Dsonar.java.binaries=**/* -Dsonar.pullrequest.key=${{ steps.get-pr-info.outputs.pr_number }} -Dsonar.pullrequest.branch=${{ steps.get-pr-info.outputs.pr_branch }} -Dsonar.pullrequest.base=${{ steps.get-pr-info.outputs.pr_base }}
+        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo -Dsonar.java.binaries=**/* -Dsonar.pullrequest.key=${{ steps.pr_number.outputs.content }} -Dsonar.pullrequest.branch=${{ env.PR_HEAD_BRANCH }} -Dsonar.pullrequest.base=${{ env.PR_BASE_BRANCH }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
