--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -34,30 +34,6 @@ jobs:
           path: compiled
           workflow_search: true
 
-      - name: Read PR number
-        id: pr_number
-        uses: juliangruber/read-file-action@v1
-        with:
-          path: ./pr_number.txt
-
-      - name: Request GitHub API for PR data
-        uses: octokit/request-action@v2.x
-        id: get_pr_data
-        with:
-          route: GET /repos/{full_name}/pulls/{number}
-          number: ${{ steps.pr_number.outputs.content }}
-          full_name: ${{ github.event.repository.full_name }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Save branches
-        run: |
-          PR_HEAD_BRANCH=$(echo "${{ fromJson(steps.get_pr_data.outputs.data).head.ref }}" | jq -r '.')
-          PR_BASE_BRANCH=$(echo "${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}" | jq -r '.')
-    
-          echo "PR_HEAD_BRANCH=$PR_HEAD_BRANCH" >> $GITHUB_ENV
-          echo "PR_BASE_BRANCH=$PR_BASE_BRANCH" >> $GITHUB_ENV
-
       - name: Download PR number
         uses: dawidd6/action-download-artifact@v10
         with:
@@ -69,6 +45,28 @@ jobs:
           name: pr_number
           path: .
           workflow_search: true
+
+      - name: Read PR number
+        id: pr_number
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./pr_number.txt
+
+      - name: Request GitHub API for PR data
+        uses: octokit/request-action@v2.x
+        id: get_pr_data
+        with:
+          route: GET /repos/${{ github.event.repository.full_name }}/pulls/${{ steps.pr_number.outputs.content }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Save branches
+        run: |
+          PR_HEAD_BRANCH="${{ fromJson(steps.get_pr_data.outputs.data).head.ref }}"
+          PR_BASE_BRANCH="${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}"
+    
+          echo "PR_HEAD_BRANCH=$PR_HEAD_BRANCH" >> $GITHUB_ENV
+          echo "PR_BASE_BRANCH=$PR_BASE_BRANCH" >> $GITHUB_ENV
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
