--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,49 +7,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      actions: write
-    name: "Java build"
+    strategy:
+      matrix:
+        java: [11, 17]
+    name: "Java ${{ matrix.java }} build"
     steps:
-      - name: 'Test for Sonar secret'
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-            echo "SONAR_TOKEN_SET=$(test ${SONAR_TOKEN} && echo true)" >> $GITHUB_ENV
       - uses: actions/checkout@v4
-
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: "17"
+          java-version: "${{ matrix.java }}"
           cache: "maven"
-
       - name: Check
         run: mvn -B verify
-
-      - name: Sonar
-        if: env.SONAR_TOKEN_SET == 'true'
+      - name: Check latest during push
+        if: matrix.java == '17' && github.event_name == 'push'
+        run: mvn -B -P metrics verify
+      - name: Test lastest during push
+        if: matrix.java == '17' && github.event_name == 'push'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
-
-      - name: Save PR number
-        run: |
-          echo "${{ github.event.pull_request.number }}" > pr_number.txt
-
-      - name: Upload Java binaries for Sonar
-        if: github.event_name == 'pull_request'
-        uses: actions/upload-artifact@v4
-        with:
-          name: pr_number
-          path: pr_number.txt
-
-      - name: Upload Java binaries for Sonar
-        if: env.SONAR_TOKEN_SET != 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: compiled
-          path: |
-            **/target
+        run: mvn sonar:sonar -=pepepopo-bot_test_repo
