--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,10 @@ jobs:
         run: mvn -B verify
       - name: Check latest during push
         if: matrix.java == '17' && github.event_name == 'push'
-        run: mvn -B -P metrics verify
+        run: mvn clean -B -P metrics verify
       - name: Test lastest during push
         if: matrix.java == '17' && github.event_name == 'push'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -=pepepopo-bot_test_repo
+        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
+
