--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
         if: matrix.java == '17' && github.event_name == 'push'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -=pepepopo-bot_test_repo
+        run: mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
