--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,29 @@
 name: Build
+
 on:
   push:
   pull_request:
+
 jobs:
-  Echo:
-    uses: pepepopo-bot/workflows/.github/workflows/workflow.yml@main
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [11, 17]
+    name: "Java ${{ matrix.java }} build"
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "${{ matrix.java }}"
+          cache: "maven"
+      - name: Check
+        run: mvn -B verify
+      - name: Offline mode
+        run: mvn dependency:go-offline
+      - name: sonar
+        run: mvn -o sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo
+        env:
+          SONAR_TOKEN: {{ secrets.SONAR_TOKEN }}
