add offline mode to pr_target

--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -5,6 +5,7 @@ jobs:
   sonar:
     runs-on: ubuntu-latest
       - name: offline mode
+        run: mvn dependency:go-offline
       - name: checkout
         with:
           fetch-depth: 0
