--- a/.github/workflows/sonar_analysis_pr.yml
+++ b/.github/workflows/sonar_analysis_pr.yml
@@ -51,8 +51,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           # předávat versi jako latest pro test pr-event.txt ??
-          version: '17'
-          distribution: 'temurine'
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
 
       - name: Cache SonarCloud packages
@@ -65,8 +65,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo \
-          -Dsonar.java.binaries=**/* \
-          -Dsonar.pullrequest.key=${{ steps.pr_number.outputs.content }} \
-          -Dsonar.pullrequest.branch=${{ env.PR_HEAD_BRANCH }} \
-          -Dsonar.pullrequest.base=${{ env.PR_BASE_BRANCH }}
+          mvn sonar:sonar -Dsonar.projectKey=pepepopo-bot_test_repo \          
+               -Dsonar.pullrequest.key=${{ env.pr-key }} \
+               -Dsonar.pullrequest.branch=${{ env.pr-head-ref }} \
+               -Dsonar.pullrequest.base=${{ env.pr-base-ref }}
+  # -Dsonar.java.binaries=**/* \
