--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn -B verify
   sonar:
     needs: build
-    if: github.ref_name == 'main' || github.event.pull_request.base.ref == 'main'
+    if: github.base_ref == 'main' && github.event.pull_request.base.ref == 'main'
     name: Prepare analysis context
     uses: ./.github/workflows/sonar-pull-prepare.yml
     with:
