--- a/.github/workflows/sonar-trigger.yml
+++ b/.github/workflows/sonar-trigger.yml
@@ -11,22 +11,20 @@ permissions:
   contents: read
 
 jobs:
-  trigger-pull:
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request'
-    name: Handle pull_request event
-    uses: ./.github/workflows/sonar-pull-maven.yml
+  prepare:
+    if: github.event.workflow_run.conclusion == 'success'
+    uses: ./.github/workflows/sonar-prepare.yml
+    name: Prepare analysis context
     with:
-      java_version: "17"
       workflow_run: ${{ toJSON(github.event.workflow_run) }}
-      project_key: 'pepepopo-bot_test_repo'
-    secrets:
-      sonar_token: ${{ secrets.SONAR_TOKEN }}
-  trigger-push:
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push' && github.event.workflow_run.head_branch == 'main'
-    name: Handle push event
+  trigger:
+    needs: prepare
+    if: needs.prepare.outputs.sonar_allowed
+    name: Trigger Sonar analysis
     uses: ./.github/workflows/sonar-maven.yml
     with:
-      java_version: '17'
+      java_version: 21
+      pull_request: ${{ needs.prepare.outputs.pull_request }}
       project_key: 'pepepopo-bot_test_repo'
     secrets:
       sonar_token: ${{ secrets.SONAR_TOKEN }}
