--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -39,5 +39,6 @@ jobs:
           git checkout prod
           file="commits.txt"
           while read -r line; do
-            git cherry-pick "$line\n" || git cherry-pick --abort
+            echo "$line"
+            git cherry-pick "$line" || git cherry-pick --abort
           done <$file
