--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,15 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     # Only react to merged PRs for security reasons.
     # See https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#pull_request_target.
-    if: >
-      github.event.pull_request.merged
-      && (
-        github.event.action == 'closed'
-        || (
-          github.event.action == 'labeled'
-          && contains(github.event.label.name, 'backport')
-        )
-      )
+    if: github.event.action == 'labeled' && contains(github.event.label.name, 'backport')
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -30,8 +22,7 @@ jobs:
         run: |
           git fetch origin main
           git fetch origin pull/${{ github.event.pull_request.number }}/head:backport
-          echo "origin pull/${{ github.event.pull_request.number }}/head:backport"
-          COMMITS=$(git log --format="%H" origin/main..backport)
+          COMMITS=$(git log --format="%H" main..backport)
           echo "$COMMITS"
           echo "$COMMITS" > commits.txt
 
@@ -40,6 +31,9 @@ jobs:
         run: |
           git checkout prod
           file="commits.txt"
+          if [-f commits.txt]; then
+            echo 'True'
+          fi
           while read -r line; do
             echo "$line"
             git cherry-pick "$line" || git cherry-pick --abort
