--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,7 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     # Only react to merged PRs for security reasons.
     # See https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#pull_request_target.
-    if: github.event.action == 'labeled'
+#    if: >
+#      github.event.pull_request.merged
+#      && (
+#        github.event.action == 'closed'
+#        || (
+#          github.event.action == 'labeled'
+#          && contains(github.event.label.name, 'backport')
+#        )
+#      )
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
