--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -28,9 +28,11 @@ jobs:
 
       - name: Fetch PR branch
         run: |
-          git fetch origin main
+          git fetch --no-tags --prune --depth=0 origin
           git fetch origin pull/${{ github.event.pull_request.number }}/head:backport
-          COMMITS=$(git log --format="%H" main..backport)
+        
+          git log --oneline origin/main..backport
+          COMMITS=$(git log --format="%H" origin/main..backport)
           echo "$COMMITS"
           echo "$COMMITS" > commits.txt
 
@@ -39,8 +41,8 @@ jobs:
         run: |
           git checkout prod
           file="commits.txt"
-          if [-f commits.txt]; then
-            echo 'True'
+          if [ -f commits.txt ]; then
+            echo "True"
           fi
           while read -r line; do
             echo "$line"
