--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -39,11 +39,10 @@ jobs:
       ## bude ten commit vždy jen jeden??
       - name: Cherry-pick to backport branch
         run: |
+          git config user.name "adela-domokosova"
+          git config user.email "adela.domokosova@gmail.com"
           git checkout prod
           file="commits.txt"
-          if [ -f commits.txt ]; then
-            echo "True"
-          fi
           while read -r line; do
             echo "$line"
             git cherry-pick "$line" || git cherry-pick --abort
