--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Fetch PR branch
         run: |
           git fetch origin main
-          git fetch origin pull/83/head:backport
+          git fetch origin pull/${{ github.event.pull_request.number }}/head:backport
           COMMITS=$(git log --format="%H" main..backport)
           echo "$COMMITS"
           echo "$COMMITS" > commits.txt
