--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -39,21 +39,37 @@ jobs:
           git config user.name "adela-domokosova"
           git config user.email "adela.domokosova@gmail.com"
           git checkout prod
+          
+          failed=0
+          
           while read -r line; do
-            echo "$line"
-            git cherry-pick "$line" || git cherry-pick --abort
+            git cherry-pick "$line" || {
+            echo "Conflict"
+            git cherry-pick --abort
+            failed=1
+            break
           done <commits.txt
 
           if [ "$failed" -eq 1 ]; then
-             echo "Cherry-pick failed. Commenting on PR..."
-             gh pr comment ${{ github.event.pull_request.number }} --body " Cannot cherry-pick due to merge conflict."
-             exit 1
-           else
-             echo "Cherry-pick succeeded. Pushing and creating PR..."
-             git push origin backport/prod-${{ github.event.pull_request.number }}
-             gh pr create \
-               --title "Backport PR #${{ github.event.pull_request.number }} to prod" \
-               --body "Cherry-picked changes from #${{ github.event.pull_request.number }} to \`prod\`." \
-               --base prod \
-               --head backport/prod-${{ github.event.pull_request.number }}
-           fi
+            echo "Cherry-pick failed, commenting on PR..."
+            curl -s -X POST \
+              -H "Authorization: token $GITHUB_TOKEN" \
+              -H "Content-Type: application/json" \
+              -d "{\"body\":\"Cannot cherry-pick due to merge conflict.\"}" \
+              "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            exit 1
+          else
+            echo "Cherry-pick succeeded, pushing and creating PR..."
+            git push origin backport/prod-${{ github.event.pull_request.number }}
+            
+            curl -s -X POST \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d "{
+            \"title\": \"Backport PR #${{ github.event.pull_request.number }} to prod\",
+            \"head\": \"backport/prod-${{ github.event.pull_request.number }}\",
+            \"base\": \"prod\",
+            \"body\": \"Cherry-picked changes from #${{ github.event.pull_request.number }} to \`prod\`.\"
+          }" \
+            https://api.github.com/repos/${{ github.repository }}/pulls
+          fi
