--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -2,8 +2,8 @@ name: backport.yml
 on:
   #  pull_request:
   #    types: [ closed ]
-  pull_request_target:
-    types: [ labeled, closed ]
+  pull_request:
+  push:
 
 jobs:
   backport:
