--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,9 +1,9 @@
 name: backport.yml
 on:
-    pull_request:
-      types: [ closed, labeled ]
-  # pull_request_target:
-  #   types: [ labeled, closed ]
+    #pull_request:
+    #  types: [ closed, labeled ]
+    pull_request_target:
+      types: [ labeled, closed ]
 
 jobs:
   backport:
@@ -33,8 +33,13 @@ jobs:
           COMMITS=$(git log --format="%H" main..backport)
           echo "$COMMITS"
           echo "$COMMITS" > commits.txt
-      ## co merge commity
+
+      # api call for merge commit sha insted
+
+
+
       ## GH token/ app token/PAT
+      # gh api or gh cli
       - name: Cherry-pick to backport branch
         run: |
           git config user.name "adela-domokosova"
@@ -53,7 +58,7 @@ jobs:
           done <commits.txt
 
           if [ "$failed" -eq 1 ]; then
-            echo "Cherry-pick failed, commenting on PR..."
+            echo "Fail, comment"
             curl -s -X POST \
               -H "Authorization: token $GITHUB_TOKEN" \
               -H "Content-Type: application/json" \
@@ -61,7 +66,7 @@ jobs:
               "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
             exit 1
           else
-            echo "Cherry-pick succeeded, pushing and creating PR..."
+            echo "Cherry-pick OK, pushing..."
             git push origin backport/prod-${{ github.event.pull_request.number }}
             
             curl -s -X POST \
@@ -75,3 +80,5 @@ jobs:
           }" \
             https://api.github.com/repos/${{ github.repository }}/pulls
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
